--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# This file is used for Git repositories to specify intentionally untracked files that Git should ignore. 
+# This file is used for Git repositories to specify intentionally untracked files that Git should ignore.
 # If you are not using git, you can delete this file. For more information see: https://git-scm.com/docs/gitignore
 # For useful gitignore templates see: https://github.com/github/gitignore
 
@@ -26,3 +26,14 @@ Thumbs.db
 ehthumbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
+
+# editor settings
+.vscode/
+
+# script chores
+scripts/chore
+
+# Metadata API temp directories
+manifest/
+mdtapi/
+incremental/
