--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
       # - attach_workspace:
       #     at: node_modules
       - run: echo "A first hello"
+      - run: sfdx --version
 
 workflows:
   get-info:
