--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,7 @@ jobs:
       - run: echo "A first hello"
       - run: sfdx --version
 
-  hold:
-    docker:
-      - image: node:10.15.3
-    # steps:
-    #   - checkout
+  - hold
 
 workflows:
   test-auth-int:
