--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - checkout
       - run: bash scripts/install-utils.sh
-      - run: echo "A first hello"
+      - run: mkdir keys
+      - run: echo $SERVER_KEY > $KEY_PATH
       - run: bash scripts/jwt-login.sh $CLIENT_ID $KEY_PATH $USER $ALIAS $INSTANCE_URL
 
   hold:
