--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ workflows:
             branches:
               only: develop
 
+  # Adhoc Jobs requiring manual Approval
   get-info:
     jobs:
       - hold:
